syntax = "proto3";

option go_package = "github.com/open-exam/open-exam-backend/grpc-shared;shared";

message StandardStatusResponse {
    bool status = 1;
    string message = 2;
}

message StandardIdRequest {
    uint64 idInt = 1;
    string idString = 2;
}

message StandardIdResponse {
    uint64 idInt = 1;
    string idString = 2;
}

enum UserLevels {
    admin = 0;
    organization = 1;
    group = 2;
    team = 3;
    customTeam = 4;
}